[gd_scene load_steps=7 format=3 uid="uid://b137n51hwvhty"]

[ext_resource type="Texture2D" uid="uid://bui0au233o4tj" path="res://assets/art/items/blood_orb.png" id="1_0wtjo"]
[ext_resource type="Script" path="res://items/blood_orb.gd" id="1_ersb7"]

[sub_resource type="Animation" id="Animation_xbq65"]
resource_name = "splash"
length = 0.666671
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("collision_shape_2d:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("collision_polygon_2d:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_kyvsw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("collision_shape_2d:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("collision_polygon_2d:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3qpl0"]
_data = {
"RESET": SubResource("Animation_kyvsw"),
"splash": SubResource("Animation_xbq65")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_w8rvd"]
radius = 21.0238

[node name="blood_orb" type="Area2D"]
z_index = -1
script = ExtResource("1_ersb7")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_0wtjo")
hframes = 3
vframes = 3

[node name="animation_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3qpl0")
}
autoplay = "RESET"

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_w8rvd")

[node name="collision_polygon_2d" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-48, 24, 47, 24, 38, -4, 12, -23, -14, -23, -38, -5)
disabled = true

[node name="ray_cast_2d" type="RayCast2D" parent="."]
target_position = Vector2(0, 19)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
